# game_rs

./: Cargo.toml  config.ini  todo.org  à
assets/: Frog.ase  Knight.ase  RedSquare.ase  Terrain.ase  map0.tmx  sunflower.ase
configini/: Cargo.toml
configini/configini_derive/: Cargo.toml
configini/configini_derive/src/: lib.rs
configini/src/: lib.rs
shaders/: tile.wgsl
src/: camera.rs  config.rs  error.rs  game.rs  layer.rs  level.rs  main.rs  renderer.rs  tileset.rs
